updating backend readme